* 2014-03-03 - tobias.friedrich@open-xchange.com

- Fix for bug 31258: Add (cid,changing_date) index to calendar tables to speed up change detection 

* 2014-03-01 - thorben.betten@open-xchange.com

 - Fix for bug 30701: Signal proper "Content-Length" in case "off"/"len" parameters were specified
 - Fix for bug 30598: Set disposition explicitly to "attachment" on forward-as-attachment action

* 2014-02-28 - marcus.klein@open-xchange.com

 - Fix for bug 23141: Remember parsed uploaded and temporarily stored files even if too much form fields are sent in the upload.

* 2014-02-28 - jan.bauerdick@open-xchange.com

 - Fix for bug 31335: Re-run update-tasks in correct order

* 2014-02-28 - thorben.betten@open-xchange.com

 - Fix for bug 31347: Dropped tabs in empty lines
 - Fix for bug 31001: Changed lock manager API to have a session as argument for safe access to user's session

* 2014-02-27 - thorben.betten@open-xchange.com

 - Fix for bug 31299: Check validity of associated OAuth account prior to creating a messaging account

* 2014-02-26 - thorben.betten@open-xchange.com

 - Fix for bug 31316: Check for a syntactically empty-element tag prior to marking it
 - Fix for bug 31298: Enforce to use secure connection to Twitter API; since Jan 14th, 2014, api.twitter.com only accepts SSL connections

* 2014-02-25 - marc.arens@open-xchange.com

 - Fix for bug 31300: Retrieve client state after blocking cleanup of local member
 
* 2024-02-25 - ioannis.chouklis@open-xchange.com

 - Fix for bug 30773: NullPointerException at com.openexchange.spamsettings.generic.osgi.Activator.stop()
 
* 2014-02-25 - martin.herfurth@open-xchange.com

 - Fix for bug 31191: Fixed erroneous permission check.

* 2014-02-25 - thorben.betten@open-xchange.com

 - Fix for bug 31252: Put error arguments into "error_params" field for compatibility reasons
 - Fix for bug 31287: Do not apply black-list on provisioning calls