@@ -19,6 +19,7 @@ Import-Package: com.openexchange.ajax,
  com.openexchange.groupware.ldap,
  com.openexchange.groupware.settings,
  com.openexchange.groupware.userconfiguration,
+ com.openexchange.i18n,
  com.openexchange.java,
  com.openexchange.log,
  com.openexchange.mail,
